[gd_scene load_steps=9 format=3 uid="uid://ctfxrhcbqydwj"]

[ext_resource type="Script" uid="uid://bbejvgriltre2" path="res://Scripts/main.gd" id="1_21xkr"]
[ext_resource type="Shader" uid="uid://b7xn1mo656jm6" path="res://Scripts/Shaders/post.gdshader" id="1_kry3j"]
[ext_resource type="PackedScene" path="res://Scenes/CardFramework/Core/card_manager.tscn" id="2_21xkr"]
[ext_resource type="PackedScene" uid="uid://brwqfgagcvnns" path="res://Scenes/CardFramework/Core/custom_card_factory.tscn" id="3_6bp64"]
[ext_resource type="PackedScene" path="res://Scenes/CardFramework/Containers/pile.tscn" id="4_344ge"]
[ext_resource type="PackedScene" path="res://Scenes/CardFramework/Containers/hand.tscn" id="5_ynf5e"]
[ext_resource type="PackedScene" uid="uid://cuovayfsjg0y1" path="res://Scenes/CardFramework/Containers/drop_zone.tscn" id="7_6bp64"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0xm2m"]
shader = ExtResource("1_kry3j")
shader_parameter/pixel_size = 1.0
shader_parameter/scanline_darkness = 0.0
shader_parameter/scanline_spacing = 1.0
shader_parameter/curvature_amount = 0.0
shader_parameter/aberration_amount = 0.0
shader_parameter/noise_amount = 0.0
shader_parameter/overlay_strength = 0.0
shader_parameter/bloom_threshold = 0.0
shader_parameter/bloom_intensity = 0.0
shader_parameter/flicker_amount = 0.0
shader_parameter/flicker_speed = 0.0

[node name="Main" type="Node"]
script = ExtResource("1_21xkr")
desired_deck_size = 48
metadata/_edit_vertical_guides_ = [1001.0]
metadata/_edit_horizontal_guides_ = [544.0]

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_0xm2m")
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="GameLayer" type="Node2D" parent="SubViewportContainer/SubViewport"]

[node name="CardManager" parent="SubViewportContainer/SubViewport/GameLayer" instance=ExtResource("2_21xkr")]
card_factory_scene = ExtResource("3_6bp64")

[node name="Deck" parent="SubViewportContainer/SubViewport/GameLayer/CardManager" instance=ExtResource("4_344ge")]
layout_mode = 0
offset_left = 818.0
offset_top = 535.0
offset_right = 818.0
offset_bottom = 535.0
stack_display_gap = 7
card_face_up = false

[node name="PlayerHand" parent="SubViewportContainer/SubViewport/GameLayer/CardManager" instance=ExtResource("5_ynf5e")]
layout_mode = 0
offset_left = 811.0
offset_top = 932.0
offset_right = 811.0
offset_bottom = 932.0
max_hand_size = 4

[node name="OpponentHand" parent="SubViewportContainer/SubViewport/GameLayer/CardManager" instance=ExtResource("5_ynf5e")]
layout_mode = 0
offset_left = 811.0
offset_top = 113.0
offset_right = 811.0
offset_bottom = 113.0
max_hand_size = 4
max_hand_spread = 850
card_face_up = false
hand_rotation_curve = null
hand_vertical_curve = null

[node name="DiscardPile" parent="SubViewportContainer/SubViewport/GameLayer/CardManager" instance=ExtResource("4_344ge")]
layout_mode = 0
offset_left = 1345.0
offset_top = 540.0
offset_right = 1345.0
offset_bottom = 540.0

[node name="DropZone" parent="SubViewportContainer/SubViewport/GameLayer/CardManager" instance=ExtResource("7_6bp64")]
layout_mode = 1
offset_left = 1334.0
offset_top = 544.0
offset_right = 1334.0
offset_bottom = 544.0
